# JDR_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.db
JDR_backend/: __init__.py  db.py  lifespan.py  main.py
JDR_backend/routers/: inventory.py
